# joke

./: README.rst  setup.cfg  setup.py  tox.ini
examples/: example_jokes.py  example_quotes.py
joke/: __about__.py  __init__.py  __main__.py  eggs.py  facts.py  jokes.py  quotes.py
tests/: test_facts.py  test_jokes.py  test_quotes.py
