[metadata]
name = axju-jokes
author = Axel Juraske
author_email = axel.juraske@short-report.de
url = https://github.com/axju/joke
description = Jokes for python
long_description = file: README.rst
keywords = joke, fun, funny, api
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment
    Topic :: Internet
    Environment :: Console

[tox:tox]
envlist = py35,py36,py37,py38,flake8
skip_missing_interpreters=True

[testenv]
commands=python -m unittest discover

[flake8]
max-line-length = 160

[pylint]
max-line-length = 160
ignore=E0401

[pylama]
format = pylint
skip = */.tox/*,*/.env/*
linters = pylint,mccabe
